--- a/index.html
+++ b/index.html
@@ -2,46 +2,102 @@
 <html>
 
 <head>
-  <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
-    integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+	<!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
+	<script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+	<link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
+		integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
 
-  <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+	<!-- CSS file -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 
-  <title>30631203 W9 Homework</title>
+	<title>30631203 A2</title>
 
 </head>
 
 <body>
-  <h1>Jeremy Rabinowicz W10 Homework</h1>
-  <div class="pure-g">
-    <div class="pure-u-1-2">
-      <div id="map"></div>
+	<div class="page">
+		<h1>Trees in Melbourne</h1>
 
-      <script type="text/javascript">
+		<div class="pure-g">
+			<div class="pure-u-5-5">
+				<div id="allmap" style="width: 100%;"></div>
+			</div>
+		</div>
 
-        var spec2 = "js/homeworkW9.vg.json";
-        vegaEmbed('#map', spec2).then(function (result) {
-          // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-        }).catch(console.error);
-      </script>
-    </div>
-    <div class="pure-u-1-2">
-      <div id="k-plot"></div>
+		<div class="pure-g">
+			<div class="pure-u-2-5">
+				<div id="allbar"></div>
+			</div>
+			<div class="pure-u-2-5">
+				<div id="alldonutplot"></div>
+			</div>
+			<div class="pure-u-1-5">
+				<p>More Text/Info Here</p>
+			</div>
+		</div>
+<h2>Significant Trees in the city of Yarra</h2>
+		<div class="pure-g">
+			<div class="pure-u-5-5">
+				<div id="sigmap" style="width: 100%;"></div>
+			</div>
+		</div>
 
-      <script type="text/javascript">
+		<div class="pure-g">
+			<div class="pure-u-2-5">
+				<div id="k-plot"></div>
+			</div>
+			<div class="pure-u-2-5">
+				<div id="donut-plot"></div>
+			</div>
+			<div class="pure-u-1-5">
+				<p>More Text/Info Here</p>
+			</div>
+		</div>
 
-        var spec2 = "js/homeworkW10.vg.json";
-        vegaEmbed('#k-plot', spec2).then(function (result) {
-          // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-        }).catch(console.error);
-      </script>
-    </div>
-  </div>
+	</div>
 </body>
+<script type="text/javascript">
 
+	var spec2 = "js/LocationDonut.vg.json";
+	vegaEmbed('#donut-plot', spec2).then(function (result) {
+		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+	}).catch(console.error);
+</script>
+<script type="text/javascript">
+
+	var spec2 = "js/SigTreeBarChart.vg.json";
+	vegaEmbed('#k-plot', spec2).then(function (result) {
+		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+	}).catch(console.error);
+</script>
+<script type="text/javascript">
+
+	var spec2 = "js/SigTreeMap.vg.json";
+	vegaEmbed('#sigmap', spec2).then(function (result) {
+		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+	}).catch(console.error);
+</script>
+<script type="text/javascript">
+
+	var spec2 = "js/AllTreeMap.vg.json";
+	vegaEmbed('#allmap', spec2).then(function (result) {
+		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+	}).catch(console.error);
+</script>
+<script type="text/javascript">
+
+	var spec2 = "js/AllTreeBarChart.vs.json";
+	vegaEmbed('#allbar', spec2).then(function (result) {
+		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+	}).catch(console.error);
+</script>
+<script type="text/javascript">
+
+	var spec2 = "js/AllLocationDonut.vg.json";
+	vegaEmbed('#alldonutplot', spec2).then(function (result) {
+		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+	}).catch(console.error);
+</script>
 </html>
