--- a/index.html
+++ b/index.html
@@ -21,17 +21,8 @@
 		<h1>Trees in Melbourne</h1>
 
 		<div class="pure-g">
-			<div class="pure-u-5-5">
+			<div class="pure-u-4-5">
 				<div id="allmap" style="width: 100%;"></div>
-			</div>
-		</div>
-
-		<div class="pure-g">
-			<div class="pure-u-2-5">
-				<div id="allbar"></div>
-			</div>
-			<div class="pure-u-2-5">
-				<div id="alldonutplot"></div>
 			</div>
 			<div class="pure-u-1-5">
 				<p>More Text/Info Here</p>
@@ -81,7 +72,7 @@
 </script>
 <script type="text/javascript">
 
-	var spec2 = "js/AllTreeMap.vg.json";
+	var spec2 = "js/allTrees.vg.json";
 	vegaEmbed('#allmap', spec2).then(function (result) {
 		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
 	}).catch(console.error);
