--- a/index.html
+++ b/index.html
@@ -22,73 +22,34 @@
 
 		<div class="pure-g">
 			<div class="pure-u-4-5">
-				<div id="allmap" style="width: 100%;"></div>
+				<div id="all" style="width: 100%;"></div>
 			</div>
 			<div class="pure-u-1-5">
 				<p>More Text/Info Here</p>
 			</div>
 		</div>
-<h2>Significant Trees in the city of Yarra</h2>
+		<h2>Significant Trees in the city of Yarra</h2>
 		<div class="pure-g">
-			<div class="pure-u-5-5">
-				<div id="sigmap" style="width: 100%;"></div>
-			</div>
-		</div>
-
-		<div class="pure-g">
-			<div class="pure-u-2-5">
-				<div id="k-plot"></div>
-			</div>
-			<div class="pure-u-2-5">
-				<div id="donut-plot"></div>
+			<div class="pure-u-4-5">
+				<div id="sig" style="width: 100%;"></div>
 			</div>
 			<div class="pure-u-1-5">
 				<p>More Text/Info Here</p>
 			</div>
 		</div>
-
 	</div>
 </body>
 <script type="text/javascript">
 
-	var spec2 = "js/LocationDonut.vg.json";
-	vegaEmbed('#donut-plot', spec2).then(function (result) {
+	var spec1 = "js/sigTrees.vg.json";
+	vegaEmbed('#sig', spec1).then(function (result) {
 		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
 	}).catch(console.error);
-</script>
-<script type="text/javascript">
-
-	var spec2 = "js/SigTreeBarChart.vg.json";
-	vegaEmbed('#k-plot', spec2).then(function (result) {
-		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-	}).catch(console.error);
-</script>
-<script type="text/javascript">
-
-	var spec2 = "js/SigTreeMap.vg.json";
-	vegaEmbed('#sigmap', spec2).then(function (result) {
-		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-	}).catch(console.error);
-</script>
-<script type="text/javascript">
 
 	var spec2 = "js/allTrees.vg.json";
-	vegaEmbed('#allmap', spec2).then(function (result) {
+	vegaEmbed('#all', spec2).then(function (result) {
 		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
 	}).catch(console.error);
 </script>
-<script type="text/javascript">
 
-	var spec2 = "js/AllTreeBarChart.vs.json";
-	vegaEmbed('#allbar', spec2).then(function (result) {
-		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-	}).catch(console.error);
-</script>
-<script type="text/javascript">
-
-	var spec2 = "js/AllLocationDonut.vg.json";
-	vegaEmbed('#alldonutplot', spec2).then(function (result) {
-		// Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-	}).catch(console.error);
-</script>
 </html>
