--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<!-- CSS file -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
 	<title>30631203 A2</title>
 
@@ -18,14 +19,45 @@
 
 <body>
 	<div class="page">
-		<h1>Trees in Melbourne</h1>
+		<h1>Visualising Trees around Melbourne</h1>
+		<h2>Trees in the city of Melbourne</h2>
 
 		<div class="pure-g">
 			<div class="pure-u-4-5">
 				<div id="all" style="width: 100%;"></div>
 			</div>
 			<div class="pure-u-1-5">
-				<p>More Text/Info Here</p>
+				<h3>Age Diversity</h3>
+				<p>Trees have a few stages of life them being</p>
+				<ul>
+					<li><strong class="newMaturity">New Trees</strong> who were very recently planted.</li>
+					<li><strong class="juvenileMaturity">Juvenile Trees</strong> who are young trees that were recently
+						planted in the last few years.</li>
+					<li><strong class="semiMatureMaturity">Semi-mature Trees</strong> who are trees that are no longer
+						young however have not fully matured.</li>
+					<li><strong class="matureMaturity">Mature Trees</strong> who are trees that have fully matured.</li>
+					<li><strong class="overMatureMaturity">Over-mature Trees</strong> who are trees that have gone pass
+						the mature stage and begun to die.</li>
+					<li><strong class="unknownMaturity">Unknown Maturity Trees</strong> who are trees with unknown
+						maturities.</li>
+				</ul>
+				<p>As trees get older and become <strong class="overMatureMaturity">over-mature</strong> they must be
+					removed
+					to allow <strong class="newMaturity">new trees</strong> to be planted and grow. However as many of
+					the trees in Melbourne were planted at the
+					same time they must all be removed at the same time. Hence it is important to have many trees with a
+					vareity of ages.</p>
+				<br><br><br>
+				<h3>Species Diversity</h3>
+				<p>Having a wide variety of trees is also important as it can allow for increased strength against
+					pests, diseases and stress.<br><br>
+					Unfortunately the trees planted in Melbourne are dominated by Eucalyptus, Acacias, Ulmus (Elms) and
+					Platanus (Planes).<br><br>
+					As mentioned before with many of the trees being planted at similar times many of the <strong
+						class="matureMaturity">mature trees</strong>
+					are reaching the end of their life and becoming <strong
+						class="overMatureMaturity">over-mature</strong> hence it is important to have a vareity of
+					types.</p>
 			</div>
 		</div>
 		<h2>Significant Trees in the city of Yarra</h2>
@@ -34,7 +66,26 @@
 				<div id="sig" style="width: 100%;"></div>
 			</div>
 			<div class="pure-u-1-5">
-				<p>More Text/Info Here</p>
+				<br>
+				<h3>Significant Trees Program in Yarra</h3>
+				<p>Within the city of Yarra there is a program that allows anyone to nominate
+					a tree to be put on the significant tree register. These trees are in various places such as
+					<strong class="parkLocation">parks,</strong><strong class="streetLocation"> streets,</strong>
+					<strong class="residentialLocation"> residential areas,</strong>
+					<strong class="industrialLocation"> industrial areas</strong> and <strong
+						class="otherLocation">other locations.</strong><br><br>
+					These trees may be classified as significant for many reasons such as having an impressive size,
+					age, rarity or even ecological or cultural signficance.<br><br>
+					This registery of significant trees allows the council to easily identify trees that has some sort
+					of additional value. This helps when planning, managing and conversving the nature in the city.
+					It also allows for the community to become more aware and appreciative of these significant trees
+					that are all around them.
+				</p>
+				<br><br><br><br><br><br><br><br><br><br><br>
+				<h3>Significant Tree Diversity</h3>
+				<p>Unfortunately it seems that most of the significant trees in the city of Yarra suffer from the same problem that being majority are <strong
+					class="matureMaturity">mature</strong> Eucalyptus and Ulmus (Elms). However this is understandable as due to the fact that these types of trees tend to grow faster than the others.</p>
+
 			</div>
 		</div>
 	</div>
