--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
 					It also allows for the community to become more aware and appreciative of these significant trees
 					that are all around them.
 				</p>
-				<br><br><br><br><br><br><br><br><br><br><br>
+				<br><br><br><br><br><br><br><br><br>
 				<h3>Significant Tree Diversity</h3>
 				<p>Unfortunately it seems that most of the significant trees in the city of Yarra suffer from the same problem that being majority are <strong
-					class="matureMaturity">mature</strong> Eucalyptus and Ulmus (Elms). However this is understandable as due to the fact that these types of trees tend to grow faster than the others.</p>
+					class="matureMaturity">mature</strong> Eucalyptus and Ulmus (Elms). However this is understandable as due to the fact that these types of trees tend to grow faster than the others.
+				Hopefully throughout the years there will be greater variety of trees types.</p>
 
 			</div>
 		</div>
